--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title> Website with CSS </title>
 
+    <link rel="stylesheet" href="reset.css">
+
+    <!-- make sure your CSS file is last -->
     <link rel="stylesheet" href="style.css">
   </head>
 
@@ -12,7 +15,7 @@
 
     <p> Hi. </p>
 
-    <a class="google-link" href="http://google.com">
+    <a class="google-link  big-fat-text" href="http://google.com">
       Google
     </a>
     <br>
@@ -22,7 +25,7 @@
     </a>
     <br>
 
-    <a class="bnb-link" href="http://airbnb.com">
+    <a class="bnb-link  big-fat-text" href="http://airbnb.com">
       Airbnb
     </a>
     <br>
