--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title> Website with CSS </title>
 
+    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
 
     <!-- make sure your CSS file is last -->
